--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -28,5 +28,8 @@
 		<filter-name>sitemesh</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	<listener>
+    	<listener-class>Csrf.CsrfTokenSessionListener</listener-class>
+	</listener>
 	
 </web-app>
